--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ span {
 var versionElement = document.getElementById('version');
 
 // Definir la versión actual de tu proyecto
-var version = '1.0.2prueba01';
+var version = '1.0.3';
 
 // Asignar la versión al elemento
 versionElement.textContent = version
