--- a/index.html
+++ b/index.html
@@ -2538,6 +2538,7 @@ valorInputpn.addEventListener('input', function() {
                   <option value="BPDODOSXXXX">Banco Popular Dominicano</option>
                   <option value="BCBHDOSDXXX">Banco BHD</option>
                   <option value="SCRZDOSDXXX">Banco Santa Cruz</option>
+                  <option value="NOSCDOSDXXX">Banco ScotiaBanks</option>
                   <option value="BBDIDOSDXXX">Banco BDI</option>
                   <option value="VIMEDOSDXXX">Banco Vimenca</option>
                   <option value="QDDMDOSDXXX">Banco Qik Digital Dominicano</option>
