Moneda En Dolares LBTR
Cambio de Tipo de Moneda en transferencias LBTR.

--- a/index.html
+++ b/index.html
@@ -2668,7 +2668,7 @@ valorInputpn.addEventListener('input', function() {
       var tipolb = document.getElementById('tipolb').value; //Modificado Tipo 
       var tipoMCOlb = document.getElementById('tipoMCOlb').value; //Modificado Tipo 
       var origenlb = document.getElementById('origenlb').value;
-      var tipoMCODlb = document.getElementById('tipoMCODlb').value; //Modificado Tipo 
+      var tipoMCODlb = document.getElementById('tipoMCOlb').value; //Modificado Tipo 
       var valorlb = document.getElementById('valorlb').value;
       var bancolb = document.getElementById('bancolb').value;
       var tipoCDlb = document.getElementById('tipoCDlb').value; //Modificado Tipo
